<resources>
    <string name="app_name">PMDM_TO4</string>

    <string name="main_titulo">TAREA ONLINE 4</string>
    <string name="main_subtitulo">Enrique O. Fdez. Chacón</string>
    <string name="main_boton1">FIRMA</string>
    <string name="main_boton2">TRADUCTOR</string>

    <string name="menu_firma_configuracion">Configuración</string>

    <string name="actionbar_firma">Firma</string>
    <string name="actionbar_traductor">Traductor por voz</string>
    
    <string name="firma_boton_borrar">Borrar</string>
    <string name="firma_boton_guardar_interna">Guardar Firma Interna</string>
    <string name="firma_boton_guardar_externa">Guardar Firma Externa</string>
    <string name="firma_configuracion_titulo">Configuración de la firma</string>
    <string name="firma_configuracion_tamano">Tamaño del trazo</string>

    <string name="traductor_hint_texto_a_traducir">Texto a traducir</string>
    <string name="traductor_boton_traducir">Traducir</string>
    <string name="traductor_boton_reproducir">Reproducir</string>
</resources>